[gd_scene load_steps=2 format=3 uid="uid://biw0qxrb2iqsd"]

[ext_resource type="Script" path="res://components/basic_components/resize_component/ResizeComponent.gd" id="1_aqt1j"]

[node name="ResizeComponent" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchor_right = 0.0333333
anchor_bottom = 0.0592593
mouse_filter = 1
script = ExtResource("1_aqt1j")

[node name="RightDrag" type="HSplitContainer" parent="."]
custom_minimum_size = Vector2(1, 64)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.984375
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 0
mouse_default_cursor_shape = 10
metadata/_edit_use_anchors_ = true

[node name="LeftDrag" type="HSplitContainer" parent="."]
custom_minimum_size = Vector2(1, 64)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.015625
anchor_bottom = 1.0
offset_right = -1.0
grow_vertical = 2
mouse_filter = 0
mouse_default_cursor_shape = 10
metadata/_edit_use_anchors_ = true

[node name="TopDrag" type="VSplitContainer" parent="."]
custom_minimum_size = Vector2(64, 1.5)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.0234375
offset_bottom = -1.5
grow_horizontal = 2
mouse_filter = 0
mouse_default_cursor_shape = 9
metadata/_edit_use_anchors_ = true

[node name="BottomDrag" type="VSplitContainer" parent="."]
custom_minimum_size = Vector2(64, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.984375
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 0
mouse_default_cursor_shape = 9
metadata/_edit_use_anchors_ = true
